# master-thesis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: columns.py  data.yaml
notebooks/data_cleaning/: 01_eda.ipynb  02_cleaning.ipynb  03_train_valid_test_split.ipynb
src/my_project/data/: pipelines.py  preprocessing.py  utils.py
src/my_project/gnn/: data_module.py  models.py  run_optuna_study.py  trainer.py  training.py  tuning.py  utils.py
src/my_project/graphs/: __init__.py  base.py  baselines.py  information_theory.py  utils.py
